syntax = "proto3";
package ADS; // namespace

// import "timestamp.proto";

message Request {
    enum Type { // request type
        SYN = 0;
        INPUT = 1;
        FIN = 2;
        HEARTBEAT = 3;
        DATA = 4;
        LEAVE = 5;
        DISCRETE = 6;
        CONTINUE = 7;
    }
    Type type = 1;
    Player player = 2; //TODO: make this option
    string lobby_name = 3;
    string message = 4;
}

// our lobby/session data
message Response {
    enum Type {
        UNKNOWN = 0;
        SYN = 1;
        INPUT = 2;
        FIN = 3;
        HEARTBEAT = 4;
        DATA = 5;
        LOBBY = 6;
        TEST = 7;
    }
    Type type = 1;
    string session_name = 2;
    GameObject sphere = 3;
    GameObject plane = 4;
    repeated Player players = 5;
}

// our player data
message Player {
    string player_name = 1;
    DeviceInfo headset = 2;
    DeviceInfo left_controller = 3;
    DeviceInfo right_controller = 4;
    Vector2 left_joystick = 5;
    Vector2 right_joystick = 6;
    Position player_offset = 7;
    string player_ping_start = 8;
    // google.protobuf.Timestamp timestamp = 7;
}

message Vector2 {
    float x = 1;
    float y = 2;
}

message Position {
    float x = 1;
    float y = 2;
    float z = 3;
}

message Rotation {
    float x = 1;
    float y = 2;
    float z = 3;
    float w = 4;
}

message DeviceInfo {
    Position position = 1;
    Rotation rotation = 2;
}

message GameObject {
    Position position = 1;
    Rotation rotation = 2;
}
